--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,22 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 28px;
+  font-size: 24px;
+  background-color: linen;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 32px;
 }
 
 #content {
   padding: 30px;
-  background-color: linen;
   text-align: center;
-  width: 100%;
 }
 
 #content h1 {
@@ -18,4 +27,13 @@ body {
   padding: 20px;
   width: 75%;
   border-radius: 3rem;
+}
+
+#dim-sum-menu {
+  padding: 10px;
+  width: 85%;
+}
+
+#map {
+  margin: 10px auto 10px auto;
 }
