--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,34 @@ h6 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+a:link,
+a:visited {
+  background-color: lightsalmon;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+a:hover,
+a:active {
+  background-color: red;
+}
+
+header {
+  text-align: center;
+}
+
+#nav-bar {
+  padding: 10px;
+}
+
+#nav-bar a {
+  margin: 10px;
+}
+
 #content {
   padding: 30px;
   text-align: center;
@@ -28,8 +56,4 @@ h6 {
 #dim-sum-menu {
   padding: 10px;
   width: 85%;
-}
-
-#map {
-  margin: 10px auto 10px auto;
 }
